Fix paragraph left alignment, update text

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ a, a:link, a:visited, a:hover, a:active {
 p {
   color: #efecec;
   text-shadow: 1px 1px #5f4444, 1px -1px #5f4444, -1px 1px #5f4444, -1px -1px #5f4444;
-  padding: 0 10px 0 10px;
+  padding: 0 10px 0 0;
   line-height: 2;
   letter-spacing: 0.06em;
   font-weight: 300; }
